--- a/_posts/2019-07-13-the-us-narrative-today.html
+++ b/_posts/2019-07-13-the-us-narrative-today.html
@@ -2534,107 +2534,107 @@ stories:
   domain: http://www.morningjournal.com/
   link: https://www.morningjournal.com/entertainment/audrina-patridge-s-tough-divorce/article_d4b09598-135f-5d75-b491-079a170f53b6.html
 images:
-- name: abe-lincoln-one-ww2-dresden-file-00-00-07-91.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-ww2-dresden-file-00-00-07-91.jpg
-- name: lincoln-memorial-lincolnmemorial-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-creativity.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-plentiful.jpg
-- name: berlinwall-DSC-0084-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-constitution.jpg
-- name: gypsy-wagon-gypsywagon-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-green-zuma.jpg
-- name: dragon_close-up-wreck.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-wreck.jpg
-- name: mistywoods-babyfoot-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-dark-rain.jpg
-- name: statue-of-liberty-front-view-statueofliberty-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-propaganda-leaflets.jpg
-- name: dragon-desert-desert-dragon-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-sunday.jpg
-- name: walled-garden-walled-garden-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-ww2-color.jpg
-- name: aws-s3-stories-statue-face-open-mouth-copper-circuit.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-statue-face-open-mouth-copper-circuit.png
-- name: crow_rainbow_festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_rainbow_festival.jpg
-- name: beach-rocks-beach-rocks-currents-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-oily-mcoilface.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-smoking-cigarette.jpg
-- name: stories-new-downtheline-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-downtheline-dark-dali.jpg
-- name: machine-road-machine-road-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-yellow-collage.jpg
-- name: trucksilo-trucksilo-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-colored-circuits.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-bright-sand.jpg
-- name: cyber-api-description-wars-mosaic-face-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cyber-api-description-wars-mosaic-face-internet-numbers.jpg
-- name: desert-dragon-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/desert-dragon-purp-paper.jpg
-- name: machine-road-machine-road-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-colored-circuits.jpg
-- name: white-house-whitehouse-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-sand-paper.jpg
-- name: machine-road-machine-road-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-graham-sutherland.jpg
-- name: downtown-trucksilo-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-sunday.jpg
-- name: old-house-oldhouse-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-dali-two.jpg
-- name: death-valley-death-valley-national-park-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-blue-circuit.jpg
-- name: liberty-back-statue-liberty-back-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-cinnamon-rolls.jpg
-- name: nazi-invasion-IMG_7916.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_7916.jpg
-- name: downtown-trucksilo-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-neo-instinct.jpg
-- name: oldhotel-oldhotel-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-blue-brush.jpg
-- name: status-berlin-status-berlin-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-oily-mcoilface.jpg
-- name: status-berlin-status-berlin-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-mucha-mult.jpg
-- name: amusement-park-amusement-park-2-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-colorful-dream.jpg
-- name: old-gas-pumps-oldgaspumps-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-crabapple.jpg
-- name: san-francisco-street-view-san-francisco-street-view-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-hot-spicy.jpg
-- name: aws-s3-square-C3JdRtDWMAUqS6L.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C3JdRtDWMAUqS6L.jpg
-- name: wind-mills-windmills-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-dark-rain.jpg
-- name: old-door-lock-old-door-lock-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-dali-three.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-bright-sand.jpg
-- name: window-window-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-internet-numbers.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-kand-two.jpg
-- name: rockingchair-rockingchair-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-green-zuma.jpg
-- name: white-house-lawn-white-house-window-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-oily-mcoilface.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-gred-mash.jpg
-- name: aws-s3-goldsilverfalls-goldsilverfalls-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-goldsilverfalls-goldsilverfalls-still.jpg
-- name: paris-paris-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-space-pizza.jpg
-- name: nyc-flag-nycflag-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-crabapple.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-blue-circuit-3.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-copper-circuit.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-copper-circuit.JPG
-- name: nyc-flag-nycflag-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-nazi-poster.jpg
-- name: power-lines-power-lines-empty-space-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-colorful-blocks.jpg
+- name: curtain-curtain-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-umberto-bocc.jpg
+- name: birdhouse-birdhouse-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-matrix.jpg
+- name: old-cabin-oldcabin-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-light-dali.jpg
+- name: oldhouse-oldhouse-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-purple-pond.jpg
+- name: lincoln-memorial-lincolnmemorial-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-smoking-cigarette.jpg
+- name: windowmountain-window-mountain-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-hot-spicy.jpg
+- name: server-cloud-server-racks-door-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-clean-view.jpg
+- name: downtown-trucksilo-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-really-hot.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-kandinsky-bv.jpg
+- name: flower-barbed-wire-flower-barbed-wire-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-satan-red.jpg
+- name: oldhotel-oldhotel-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-blue-circuit.jpg
+- name: dc-statue-dcstatue-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-crabapple.jpg
+- name: carry-load-carryload-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-ww2-dresden.jpg
+- name: stories-fence-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-fence-ww2-dresden.jpg
+- name: razorwire-DSC-0080-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-crafty-painting.jpg
+- name: udnie-IMG_4721.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_4721.jpg
+- name: power-lines-power-lines-empty-space-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-aqua.jpg
+- name: gears-4882162452-fa3126b38d-b-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-nazi-poster.jpg
+- name: powerlines-power-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-sand-paper.jpg
+- name: statue-of-liberty-front-view-statueofliberty-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-copper-circuit-2.jpg
+- name: school-clouds-church-clouds-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-oily-mcoilface.jpg
+- name: oldhouse-oldhouse-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-light-dali.jpg
+- name: oldsmallboat-oldsmallboat-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-ww2-dresden.jpg
+- name: oldtrain-oldtrain-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-free-woman.jpg
+- name: mediterranean-mediterranean-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-dry-skin.jpg
+- name: status-berlin-status-berlin-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-hot-spicy.jpg
+- name: curtain-curtain-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-dark-soul.jpg
+- name: white-house-lawn-white-house-lawn-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-propaganda-leaflets.jpg
+- name: old-granary-field-oldhouse-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-post-modern.jpg
+- name: trucksilo-trucksilo-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-marcel-duchamp.jpg
+- name: wind-mills-windmills-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-alien-goggles.jpg
+- name: fence-mexico-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-internet-numbers.jpg
+- name: fence-gorilla-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-gorilla-blue-circuit.jpg
+- name: old-cabin-oldcabin-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-bright-sand.jpg
+- name: crow-crow-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-ww2-dresden.jpg
+- name: white-house-lawn-white-house-window-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-blue-granite.jpg
+- name: amusement-park-amusement-park-2-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-deep-connections.jpg
+- name: old-cabin-oldcabin-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-satan-red.jpg
+- name: fence-fence-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-alberto-giacometti.jpg
+- name: window-window-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-far-away.jpg
+- name: downtown-trucksilo-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-umberto-bocc.jpg
+- name: beach-rocks-beach-rocks-currents-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-far-away.jpg
+- name: bluelake-crunch-paper-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-crunch-paper-file-00-00-38-67.jpg
+- name: ellis-island-ellis-island-room-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-creativity.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-blue-circuit.jpg
+- name: christianity-christianity-under-construction-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-gan-vogh.jpg
+- name: death-valley-death-valley-national-park-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-spagetti-accident.jpg
+- name: paris-paris-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-colorful-blocks.jpg
+- name: art-museum-art-museum-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-nazi-poster.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-ww2-color.jpg
+- name: powerlines-power-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-hot-spicy.jpg
 ---
 Barry Crawls Ashore In Louisiana, Weakens To Tropical Storm.&nbsp;UFs Dark History Of Animal Testing.&nbsp;State Police Seek Help After Woman Found Dead In Charles River.&nbsp;Faulty Belvedere Water Pipe That Broke Twice Isnt On Replacement List.&nbsp;Umbrage Taken With Springs Ranch Development.&nbsp;Storm Looking Into Abuse Allegations Against Natasha Howard.&nbsp;Ed Sheeran Reveals Wife Inspired Justin Bieber Collaboration.&nbsp;Court Order Blocking Contraception Exemptions Upheld.&nbsp;
